Fix black backgrounds in glade and baobab
The black backgrounds only appear when using overlay-scrollbars.

These are hacks to work around limitations in gtk 3.10.

--- a/Radiance/gtk-3.0/apps/baobab.css
+++ b/Radiance/gtk-3.0/apps/baobab.css
@@ -1,3 +1,12 @@
+
+BaobabWindow GtkGrid {
+    background-color: @bg_color;
+}
+
+BaobabLocationList GtkGrid {
+    background-color: transparent;
+}
+
 .baobab-toolbar.toolbar {
     border-color: shade (@bg_color, 0.9);
     border-style: solid;
